--- a/src/ApplicantTracking.Infra.IoC/ApplicantTracking.Infra.IoC.csproj
+++ b/src/ApplicantTracking.Infra.IoC/ApplicantTracking.Infra.IoC.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ApplicantTracking.Application\ApplicantTracking.Application.csproj" />
+    <ProjectReference Include="..\ApplicantTracking.Infrastructure\ApplicantTracking.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
